cabal-version:      3.0
name:               caching-sim
version:            0.1.0.0
-- synopsis:
-- description:
author:             Tali Auster
maintainer:         me@tali.network
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable caching-sim
    import:           warnings
    main-is:          Main.hs
    other-modules:    Data.Cache.Sim.Types, Data.Cache.Sim.Algs
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0, extra
    hs-source-dirs:   app, lib
    default-language: Haskell2010
