cabal-version:      3.0
name:               caching-sim
version:            0.1.0.0
-- synopsis:
-- description:
author:             Tali Auster
maintainer:         me@tali.network
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable caching-sim
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0, caching-sim
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules: Data.Cache.Sim.Types, Data.Cache.Sim.Algs
    build-depends:   base ^>=4.19.2.0, mtl ^>= 2.3, extra
    hs-source-dirs:  lib

test-suite caching-sim-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: base, caching-sim, mtl ^>= 2.3, hspec
    hs-source-dirs: test
